--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,5 @@
-awscli==1.18.56
-botocore==1.16.6
-colorama==0.4.3
-docutils==0.15.2
-jmespath==0.9.5
-pyasn1==0.4.8
-python-dateutil==2.8.1
-PyYAML==5.3.1
-rsa==3.4.2
-s3transfer==0.3.3
-six==1.14.0
-urllib3==1.25.9
+Pillow==8.1.0
+imutils==0.5.4
+opencv-python==4.5.1.48
+numpy==1.19.5
+scikit-image==0.18.1
